# SpScene2d

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
Examples/: CMakeLists.txt
Examples/QPainter/: CMakeLists.txt  DebugVisualObject.cpp  DebugVisualObject.h  EmptyRenderFilter.cpp  EmptyRenderFilter.h  Main.cpp  Main.qml  PainterScene2dLayer.cpp  PainterScene2dLayer.h  PainterScene2dLayer.qml  QPainterScene2dLayer.cpp  QPainterScene2dLayer.h  QPainterScene2dLayerItem.cpp  QPainterScene2dLayerItem.h  QmlAppContext.cpp  QmlAppContext.h  QmlRegister.cpp  QmlRegister.h  QuickPainterScene2dLayer.cpp  QuickPainterScene2dLayer.h  QuickScene2d.cpp  QuickScene2d.h  RectangleVisualObject.cpp  RectangleVisualObject.h  Scene2d.qml  main.cpp  main.qml  qml.qrc
Examples/QPainter/Qml/: Main.qml  Qml.qrc
Examples/QPainter/Source/: Main.cpp  QmlAppContext.cpp  QmlAppContext.h  QmlRegister.cpp  QmlRegister.h  QuickScene2d.cpp  QuickScene2d.h
Examples/QPainter/Source/RenderFilters/: EmptyRenderFilter.cpp  EmptyRenderFilter.h  GeneralizationRenderFilter.cpp  GeneralizationRenderFilter.h  SceneClipRenderFilter.cpp  SceneClipRenderFilter.h
Examples/RxCppExperiment/: CMakeLists.txt  main.cpp
Include/Sp/: Camera.h  ConstructorMacros.h  IPainterLayer.h  IRenderFilter.h  IVisualObject.h  RenderFilterParams.h  Scene.h  Scene2d.h  Scene2dLayer.h  Scene2dTypes.h
Source/: CMakeLists.txt  Camera.cpp  IRenderFilter.cpp  IVisualObject.cpp  Scene.cpp  Scene2d.cpp  Scene2dLayer.cpp  Scene2dPimpl.cpp  ScenePimpl.cpp
Source/Include/: Scene2dPimpl.h  ScenePimpl.h
(+13 files in other folders)
